      output.


o   Derrell Lipman <derrell@samba.org>
    * BUG 4601: Fix smbc_getxattr() to properly return the required
      size of the buffer needed to contain the extended attributes.
    * BUG 4599: Fix failure when setting attributes.
    * BUG 4634: Type of the size parameter to getpeername in
      libsmbclient code was wrong.


o   Jim McDonough <jmcd@us.ibm.com>
    * BUG 4630: Fix special case of unix_to_nt_time() for TIME_T_MAX
      and the output from http_timestring().


o   Stefan Metzmacher <metze@samba.org>
    * Merge gdb_backtrace script changes form SAMBA_4_0.


o   Lars Mueller <lars@samba.org>
    * Allow idmap_ldap to be built as a shared lib.


o   James Peach <jpeach@apple.com>
    * BUG 4426: Move FAM libraries from smbd to vfs_fam_notify.
    * BUG 2287: Replace unnecessary AC_TRY_RUN with AC_TRY_LINK.
    * BUG 4589: Fix typo in pdbedit output.


o   Simo Sorce <idra@samba.org>
    * Short circuit Unix Users and Unix Groups Domain SID checks 
      in smbd to avoid unnecessary calls to winbindd.


Release notes for older releases follow:

      --------------------------------------------------
                   ==============================
                   Release Notes for Samba 3.0.25
                            May 14, 2007
                   ==============================

The 3.0.25 release is an upgrade release over the 3.0.23/3.0.24 
series which means that a substantial amount of development has 
occurred and many new features have been added since the last
Samba production release.  We would like to thank everyone in 
the Samba community that help to test the preview snapshots and 
release candidates.  We believe that the this production release 
is in much better shape due to your help.  

Major features included in the 3.0.25 code base include:

  o Significant improvements in the winbind off-line logon support.
  o Support for secure DDNS updates as part of the 'net ads join' 
    process.